# recipe-app

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GETTING-STARTED.md  README.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/skills/recipe-from-url/: SKILL.md
.claude/skills/recipe-from-url/scripts/: build_draft.py
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  cli.py  config.py  main.py
app/api/: __init__.py  deps.py  recipes.py  schemas.py
app/auth/: __init__.py  store.py  tokens.py
app/core/: __init__.py  constants.py  ids.py  models.py  parser.py  serializer.py  validator.py  vocab.py
app/db/: __init__.py  connection.py  queries.py  schema.sql  sync.py
app/importer/: __init__.py  draft.py  save.py
app/services/: __init__.py  recipes.py
app/static/: style.css
app/templates/: _facets.html  _form.html  _pagination.html  _results.html  _search_response.html  base.html  edit.html  index.html  login.html  recipe.html
app/web/: __init__.py  auth.py  crud.py  deps.py  forms.py  library.py  markdown.py  recipe.py
docs/: architecture.md  managing-recipes.md  recipe-format.md  recipe-template.md  running.md
docs/ui-prototype/: Recipe App - Detail.html  Recipe App - Home.html  app.css  detail.css
recipes/: chickpea-spinach-curry.md  classic-french-omelette.md  lemon-garlic-roast-chicken.md
tests/: conftest.py  test_api_read.py  test_api_write.py  test_auth.py  test_auth_tokens.py  test_db_queries_library.py  test_fts_search.py  test_healthz.py  test_importer_draft.py  test_importer_save.py  test_parser_roundtrip.py  test_skill_build_draft.py  test_sync_idempotent.py  test_validator.py  test_web_crud.py  test_web_library.py  test_web_recipe.py
tests/fixtures/recipes/: fire-cider.md  miso-glazed-eggplant.md  overnight-oats.md  simple-tomato-sauce.md
tests/fixtures/recipes/breakfast/: morning-seed-jar.md
ui-prototype/: app-tweaks.jsx
