[project]
name = "recipe-app"
version = "0.1.0"
description = "Personal recipe management — Markdown is the source of truth, SQLite is a rebuildable mirror."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = []   # base install is intentionally empty; pick an extra (see below)

[project.optional-dependencies]
core = [
    "pydantic>=2.8",
    "ruamel.yaml>=0.18",
    "python-ulid>=3.0",
]
cli = [
    "recipe-app[core]",
    "typer>=0.12",
    "rich>=13.7",
]
importer = [
    "recipe-app[core]",
    "httpx>=0.27",       # future in-app URL fetch (extraction half)
    "curl_cffi>=0.7",    # used by the bundled recipe-from-url skill, run inside the app container
]
web = [
    "recipe-app[core,cli,importer]",  # web container runs `recipes sync` on boot AND hosts the
                                       # recipe-from-url skill, which execs curl_cffi inside it
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "markdown-it-py>=3.0",
    "argon2-cffi>=23.1",  # password hashing for CRUD auth (stored outside the rebuildable DB)
    "itsdangerous>=2.0",  # required by Starlette SessionMiddleware (signed session cookie)
]
api = [
    "recipe-app[core]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]   # placeholder for Stage M3; routers land later
all = [
    "recipe-app[core,cli,web,importer,api]",
]
dev = [
    "recipe-app[all]",        # tests import fastapi/jinja/typer — dev needs the full stack
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
recipes = "app.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["db/schema.sql", "templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ruamel.*", "markdown_it.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
